--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container mt-5">
 		<script src="script.js"></script>
         <h2 class="text-center"><b>Thời Khóa Biểu 11B6</b></h2>
-        <table id="myTable" class="table table-bordered">
+        <table id="myTable" class="table table-bordered" style="border: solid red">
             <thead>
                 <tr id="tableHead">
                 </tr>
@@ -27,10 +27,8 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td></td>
                 </tr>
                 <tr>
-                    <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -48,7 +46,6 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td></td>
                 </tr>
                 <tr>
                     <td></td>
@@ -58,10 +55,8 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td></td>
                 </tr>
                 <tr>
-                    <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -78,20 +73,8 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td></td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -108,10 +91,17 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td></td>
                 </tr>
                 <tr>
                     <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
                     <td></td>
                     <td></td>
                     <td></td>
