--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Schedule Table -->
     <div class="container mt-5">
 		<script src="script.js"></script>
-        <h2 class="text-center"><b>Thời Khóa Biểu 11B6</b></h2>
+        <h2 class="text-center"><b>Thời Khóa Biểu 12C6</b></h2>
         <table id="myTable" class="table table-bordered" style="border: solid red">
             <thead>
                 <tr id="tableHead">
