--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TKB 12C6</title>
     <!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
@@ -12,14 +13,14 @@
     <div class="container mt-5">
 		<script src="script.js"></script>
         <h2 class="text-center"><b>Thời Khóa Biểu 12C6</b></h2>
-        <table id="myTable" class="table table-bordered" style="border: solid red">
+        <table id="myTable" class="table table-bordered">
             <thead>
                 <tr id="tableHead">
                 </tr>
             </thead>
             <tbody id="tableBody">
                 <!-- Time Slots -->
-                <tr>
+                <tr style="border: solid lime>">
                     <td rowspan="5"></td>
                     <td></td>
                     <td></td>
@@ -29,7 +30,6 @@
                     <td></td>
                 </tr>
                 <tr>
-                    <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -45,7 +45,6 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td></td>
                 </tr>
                 <tr>
                     <td></td>
@@ -54,10 +53,8 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td></td>
                 </tr>
                 <tr>
-                    <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -81,6 +78,13 @@
                     <td></td>
                     <td></td>
                     <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                     <td></td>
                 </tr>
                 <tr>
@@ -90,19 +94,8 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td></td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
