--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <h2 class="text-center"><b>Thời Khóa Biểu 12C6</b></h2>
         <table id="myTable" class="table table-bordered">
             <thead>
-                <tr id="tableHead">
+                <tr id="tableHead" style="font-weight:bold">
                 </tr>
             </thead>
             <tbody id="tableBody">
                 <!-- Time Slots -->
                 <tr style="border: solid lime>">
-                    <td rowspan="5"></td>
+                    <td rowspan="5" style="font-weight:bold"></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -63,7 +63,7 @@
                     <td></td>
                 </tr>
                 <tr>
-                    <td rowspan="5"></td>
+                    <td rowspan="5" style="font-weight:bold"></td>
                     <td></td>
                     <td></td>
                     <td></td>
