--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Schedule Table -->
-    <div class="container mt-5">
+    <div class="container mt-5" style="overflow-x:auto;">
 		<script src="script.js"></script>
         <h2 class="text-center"><b>Thời Khóa Biểu 12C6</b></h2>
         <table id="myTable" class="table table-bordered">
@@ -22,86 +22,86 @@
                 <!-- Time Slots -->
                 <tr style="border: solid lime>">
                     <td rowspan="5" style="font-weight:bold"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
                 </tr>
                 <!-- ... Repeat for all time slots ... -->
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
                 </tr>
                 <tr>
                     <td rowspan="5" style="font-weight:bold"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
+                    <td>‏‎</td>
                 </tr>
             </tbody>
         </table>
