Clean comments/Add footer

--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TKB 12C6</title>
-    <!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <!-- Schedule Table -->
     <div class="container mt-5" style="overflow-x:auto;">
 		<script src="script.js"></script>
         <h2 class="text-center"><b>Thời Khóa Biểu 12C6</b></h2>
@@ -19,7 +17,6 @@
                 </tr>
             </thead>
             <tbody id="tableBody">
-                <!-- Time Slots -->
                 <tr style="border: solid lime>">
                     <td rowspan="5" style="font-weight:bold"></td>
                     <td>‏‎</td>
@@ -37,7 +34,6 @@
                     <td>‏‎</td>
                     <td>‏‎</td>
                 </tr>
-                <!-- ... Repeat for all time slots ... -->
                 <tr>
                     <td>‏‎</td>
                     <td>‏‎</td>
@@ -64,14 +60,6 @@
                 </tr>
                 <tr>
                     <td rowspan="5" style="font-weight:bold"></td>
-                    <td>‏‎</td>
-                    <td>‏‎</td>
-                    <td>‏‎</td>
-                    <td>‏‎</td>
-                    <td>‏‎</td>
-                    <td>‏‎</td>
-                </tr>
-                <tr>
                     <td>‏‎</td>
                     <td>‏‎</td>
                     <td>‏‎</td>
@@ -104,8 +92,11 @@
                     <td>‏‎</td>
                 </tr>
             </tbody>
+			<tfoot>
+			<tr>
+				<td colspan="7">Nếu không hiện thì do chưa có lịch. Bảng lấy TKB tuần sau mỗi 0 giờ sáng Chủ Nhật.</td>
+			</tr>
+			</tfoot>
         </table>
     </div>
-
-    <!-- Bootstrap & jQuery JS -->
 </body>
