--- a/index.html
+++ b/index.html
@@ -6,17 +6,15 @@
     <title>TKB 12C6</title>
 	<link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </head>
 <body>
-	<button id="captureBtn">Tải TKB về máy</button>
     <div class="container mt-5" style="overflow-x:auto;" id="table-container">
 		<script src="script.js"></script>
         <h2 class="text-center"><b>Thời Khóa Biểu 12C6</b></h2>
         <table id="myTable" class="table table-bordered">
             <thead>
                 <tr id="tableHead" style="font-weight:bold">
-                </tr> 
+                </tr>
             </thead>
             <tbody id="tableBody">
                 <tr style="border: solid lime>">
@@ -101,36 +99,35 @@
 			</tfoot>
         </table>
     </div>
-	<script src="script.js"></script>
-
-    <script>
-    document.getElementById('captureBtn').addEventListener('click', function() {
-        if (!isDataReady) {
-            alert('Vui lòng đợi dữ liệu tải xong!');
-            return;
-        }
-
-        const table = document.getElementById('myTable');
-        html2canvas(table, {
-            scale: 2, // Tăng độ phân giải
-            useCORS: true, // Bật CORS nếu cần
-            logging: true // Hiển thị log lỗi
-        }).then(function(canvas) {
-            const imgData = canvas.toDataURL('image/png');
-            const link = document.createElement('a');
-            link.href = imgData;
-			const startDate = new Date("2024-09-09:00:000:+7");
-			const endDate = new Date();
-			const timeDifference = Math.abs(endDate.addDays(1) - startDate);
-			const weeks = Math.ceil(timeDifference / (1000 * 60 * 60 * 24 * 7)) - 1;
-            link.download = `TKB 12C6 tuần ${weeks}.png`;
-            link.click();
-        }).catch(function(error) {
-            console.error('Lỗi html2canvas:', error);
-        });
-    });
-	</script>
 	
+	<a id="downloadLink" href="#">Download Table as PNG</a>
+
+   <script>
+  const downloadLink = document.getElementById('downloadLink');
+  const table = document.getElementById('myTable');
+
+  downloadLink.addEventListener('click', function(event) {
+    event.preventDefault();
+
+    // *** KEY CHANGES START HERE ***
+    html2canvas(table, {
+      // Important for handling potentially problematic fonts
+      useCORS: true, // Try to load cross-origin images/fonts (if any)
+      allowTaint: true, // Allow tainted canvases (might help with some fonts)
+      // Add a timeout, just in case things get stuck
+      timeout: 10000 // 10 seconds timeout
+    }).then(canvas => {
+      const dataURL = canvas.toDataURL('image/png');
+      downloadLink.href = dataURL;
+      downloadLink.download = 'table.png';
+    }).catch(error => {
+      console.error("Error capturing table:", error); // Log any errors!
+      alert("An error occurred while capturing the table. Check the console for details.");
+    });
+    // *** KEY CHANGES END HERE ***
+
+  });
+</script>
 
   
 </body>
