--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             const tableContainer = document.getElementById('myTable');
 
             // Sử dụng html2canvas để chụp ảnh
-            html2canvas(tableContainer).then(canvas => {
+            html2canvas(tableContainer, { useCORS: true }).then(canvas => {
                 // Tạo một thẻ <a> để tải ảnh về
                 const link = document.createElement('a');
                 link.download = `TKB-12C6-Tuan-${weeks}.png`; // Tên file khi tải về
