--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </head>
-<body>
+<body style="background-color: #070F2B">
+	
     <div class="container mt-5" style="overflow-x:auto;" id="table-container">
 		<script src="script.js"></script>
         <h2 class="text-center"><b>Thời Khóa Biểu 12C6</b></h2>
